--- a/src/styles/Register.css
+++ b/src/styles/Register.css
@@ -1,4 +1,3 @@
-/* Ensure the video background covers the entire screen */
 .video-background {
   position: fixed;
   top: 0;
@@ -113,7 +112,7 @@
   border: none;
   border-radius: 5px;
   background: rgba(255, 255, 255, 0.1);
-  color: white;
+  color: rgb(0, 255, 229);
   font-size: 14px;
 }
 
