--- a/src/styles/Navbar.css
+++ b/src/styles/Navbar.css
@@ -94,3 +94,13 @@
     color: #000;
   }
   
+  .btn-logout {
+  padding: 8px 16px;
+  background-color: #ff4d4d;
+  color: white;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+  font-weight: bold;
+  margin-left: 10px;
+}
